# generic-platformer

./: Cargo.toml
assets/: map.txt
src/: debug.rs  main.rs  player.rs  spriteloader.rs  tilemap.rs
src/unused/: combat.rs  fadeout.rs
