[package]
name = "bevytest"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[features]
default = [
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy/x11",
    "bevy_kira_audio/ogg"
]

[dependencies]
bevy = { version = "0.7", default-features = false }
bevy-parallax = "0.1.2"
bevy_rapier2d = "*"
bevy-inspector-egui = "0.10"
benimator = "3.0.0"

[dependencies.bevy_kira_audio]
version = "0.10.0"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = [
  "wav",
  "flac",
  "mp3",
  "ogg",
]